# pmd_dic

./: Cargo.toml  readme.md
dictool/: Cargo.toml
dictool/src/: main.rs
pmd_dic/: Cargo.toml
pmd_dic/src/: lib.rs
