[package]
name = "dictool"
version = "0.1.0"
authors = ["marius david <mariusdavid@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.9", features = [ "derive" ] }
anyhow = "1.0.38"
serde_json = "1.0.62"
pmd_dic = { path = "../pmd_dic" }