[package]
name = "pmd_dic"
version = "1.1.1"
authors = ["marius david <mariusdavid@laposte.net>"]
edition = "2018"
keywords = [ "parser" ]
repository = "https://github.com/marius851000/pmd_dic"
categories = [ "parser-implementations" ]
license = "CC0-1.0"
description = "read and write dic file from pokemon super mystery dungeon (font metadata)"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.23"
binread = "2.1.1"
binwrite = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
image = "0.23.13"